[package]
name = "ascii-hex-converter"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.5.0-rc.1"
serde = { version = "1.0.130", features = ["derive"] }
hex = "0.4.3"
url = "2.2.2"
regex = "1.5.4"